Fix some bugs with popover elements and add a subtle scrollbar that appears on hover to Outliner and Inspector when content overflows.

--- a/resources/style/global.scss
+++ b/resources/style/global.scss
@@ -148,6 +148,19 @@ details[open] > summary::before {
   background-color: var(--scrollbar-track-color);
 }
 
+.scroll-hover::-webkit-scrollbar {
+  width: 0.4rem;
+  height: 0.4rem;
+}
+
+.scroll-hover::-webkit-scrollbar-thumb {
+  display: none;
+}
+
+.scroll-hover:hover::-webkit-scrollbar-thumb {
+  display: initial;
+}
+
 ///////////////////////////////// Media Queries /////////////////////////////////
 
 ///////////////////////////////// Misc /////////////////////////////////
